--- a/Packs/ThreatGrid/ReleaseNotes/2_0_0.md
+++ b/Packs/ThreatGrid/ReleaseNotes/2_0_0.md
@@ -4,8 +4,15 @@
 - Query and upload samples to Cisco threat grid. See ThreatGrid v2 below for the list of new features and improvements.
 New: ThreatGrid v2
 - Improved data parsing to context.
-- Support generic reputation commands.
-- Add new sample associated commands.
+- Updated readable outputs.
+- Added informative descriptions to commands and arguments.
+- Supported generic reputation commands.
+- Added the ***threat-grid-ip-associated-domains*** command.
+- Added the ***threat-grid-ip-associated-urls*** command.
+- Added the ***threat-grid-domain-associated-urls*** command.
+- Added the ***threat-grid-domain-associated-ips*** command.
+- Added the ***threat-grid-ip-search*** command.
+- Added the ***threat-grid-url-search*** command.
 
 ##### Cisco Threat Grid (Deprecated)
 - Deprecated. Use the Cisco Secure Malware Analytics (Threat Grid) v2 integration.
